Fix issue #83 - Code blocks in comments doesn't get a horizontal scrollbar when too large.

--- a/app/assets/stylesheets/merge_requests.css.scss
+++ b/app/assets/stylesheets/merge_requests.css.scss
@@ -290,6 +290,10 @@ div.comment {
       float: right;
     }
   }
+
+  pre {
+    overflow-x: scroll;
+  }
 }
 
 .mr-summary {
